--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,7 +3,9 @@
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
+  <% if cart.size==0 %>
+  <h3> Your cart is empty!</h3> <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
+  <% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -49,5 +51,6 @@
       <% end %>
     </div>
   </div>
+  <% end %>
 
 </section>
