--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -82,3 +82,25 @@ main section.products-show {
     }
   }
 }
+.field {
+  display: table-caption;
+}
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+    color: gold;
+}
+.new_review {
+  text-align: -webkit-center;
+}
+.shazam {
+  margin-top: 15px;
+  border-top-style: solid;
+  border-width: thin;
+  border-top-color: lightgrey;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  border-right-color: transparent;
+}
