--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,31 +1,60 @@
 <section class="products-show">
 
-  <header class="page-header">
-    <h1><%= link_to @product.category.name, @product.category %> &raquo; <%= @product.name %></h1>
-  </header>
+    <header class="page-header">
+        <h1><%= link_to @product.category.name, @product.category %>
+            &raquo;
+            <%= @product.name %></h1>
+    </header>
 
-  <article class="product-detail">
+    <article class="product-detail">
 
-    <div class="row">
+        <div class="row">
 
-      <div class="col-sm-4">
-        <%= image_tag @product.image.url, class: 'main-img' %>
-      </div>
+            <div class="col-sm-4">
+                <%= image_tag @product.image.url, class: 'main-img' %>
+            </div>
 
-      <div class="col-sm-8">
-        <dl class="dl-horizontal">
-          <dt>Name</dt>
-          <dd><%= @product.name %></dd>
-          <dt>Description</dt>
-          <dd><%= @product.description %></dd>
-          <dt>Quantity</dt>
-          <dd><%= @product.quantity %></dd>
-          <dt>Price</dt>
-          <dd><%= @product.price %></dd>
-        </dl>
-      </div>
-    </div>
+            <div class="col-sm-8">
+                <dl class="dl-horizontal">
+                    <dt>Name</dt>
+                    <dd><%= @product.name %></dd>
+                    <dt>Description</dt>
+                    <dd><%= @product.description %></dd>
+                    <dt>Quantity</dt>
+                    <dd><%= @product.quantity %></dd>
+                    <dt>Price</dt>
+                    <dd><%= @product.price %></dd>
+                </dl>
+            </div>
+        </div>
+        <%= form_for [@product, @review] do |f| %>
+        <div class="field">
+            <%= f.label :'Review Me!' %>
+            <%= f.text_area :description %>
+        </div>
 
-  </article>
+        <div class="rating-submission">
+            <%= f.label :rating %>
+            <%= f.select(:rating, [['★',1], ['★★',2], ['★★★',3], ['★★★★',4], ['★★★★★',5]]) %>
+        </div>
+
+        <div><%= f.submit "Submit", class: "btn btn-primary" %></div>
+        <% end %>
+
+        <div class="row">
+            <% @reviews.reverse.each do |review|%>
+            <div class="shazam">
+                <p>Review by:
+                    <%=review.user.name%></p>
+                <p>The Word:
+                    <%= review.description %>
+                </p>
+                <p>Rating:
+                    <%= review.rating %>
+                </p>
+            </div>
+            <% end %>
+        </div>
+    </article>
 
 </section>
